syntax = "proto3";

package auth;

option go_package = "./internal/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Verify(VerifyRequest) returns (VerifyResponse) {}
  rpc GetDeviceToken(GetDeviceTokenRequest) returns (GetDeviceTokenResponse) {}
}

// Register

message RegisterRequest {
  string phone = 1;
  string password = 2;
  string name = 3;
  string role = 4;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string phone = 1;
  string password = 2;
  string role = 3;
  string device_token = 4;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string phone = 3;
  string role = 4;
}

// Verify

message VerifyRequest {
  string phone = 1;
  string token = 2;
  // string code = 2;
}

message VerifyResponse {
  int64 status = 1;
  string error = 2;
}

message GetDeviceTokenRequest { string phone = 1; }

message GetDeviceTokenResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

